Added get random dogs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<article class="card">
 				<p class="card--name"></p>
 				<figure class="card__imgContainer">
-					<img src="" alt="">
+					<img>
 					<button class="card--favBtn">Fav</button>
 				</figure>
 			</article>
@@ -34,7 +34,7 @@
 			<article class="card">
 				<p class="card--name"></p>
 				<figure class="card__imgContainer">
-					<img src="" alt="">
+					<img>
 					<button class="card--favBtn">Fav</button>
 				</figure>
 			</article>
@@ -42,7 +42,7 @@
 			<article class="card">
 				<p class="card--name"></p>
 				<figure class="card__imgContainer">
-					<img src="" alt="">
+					<img>
 					<button class="card--favBtn">Fav</button>
 				</figure>
 			</article>
@@ -71,6 +71,6 @@
     <p class="footer__info">Aracely Alba @AshkoreDev || &copy; 2022</p>
 	</footer>
 	
-	<script src=""></script>
+	<script src="./src/js/main.js" type="module"></script>
 </body>
 </html>
