--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</section>
 
 		<h2>Favorite Dogs</h2>
-		<section class="cardsContainer" id="favoriteDogsContainer"></section>
+		<section class="cardsContainer center" id="favoriteDogsContainer"></section>
 
 	</main>
 	<footer>
@@ -71,6 +71,6 @@
     <p class="footer__info">Aracely Alba @AshkoreDev || &copy; 2022</p>
 	</footer>
 	
-	<script src="./src/js/main.js" type="module"></script>
+	<script src="./src/main.js" type="module"></script>
 </body>
 </html>
