Added meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Proyecto para practicar consumo de API's. Favorite-Dogs página web para ver fotos de perritos.">
 	<link rel="icon" type="image/png" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/344/external-dog-animal-flaticons-lineal-color-flat-icons-2.png">
 	<title>Favorite Dogs</title>
 	<link rel="stylesheet" href="./src/css/style.css">
