--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="author" content="Aracely Alba @AshkoreDev">
-	<meta name="description" content="Favorite-Dogs website to see photos of puppies. Project to practice APIs consumption.">
+	<meta name="description" content="Favorite-Dogs website to view photos of puppies, using The Dog API.">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/344/external-dog-animal-flaticons-lineal-color-flat-icons-2.png">
